login and signup

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,32 @@ en:
   log-in: "ログイン"
   sign-up: "サインアップ"
   sign-up-now: "今すぐサインアップ!"
+  upload-review: "レビューをアップロード"
+  log-out: "ログアウト"
+  cancel: "キャンセル"
+  back: "バック"
+  search: "検索"
+  members: "メンバー"
+  albums: "アルバム"
+  groups: "グループ"
+  profile: "プロフィール"
+  settings: "設定"
+  new-group: "新しいグループ"
+  new-album: "新しいアルバム"
+  liked: "好き"
+  signup:
+    name: "名前"
+    email: "メール"
+    password: "パスワード"
+    confirmation: "確認"
+    password-confirmation: "パスワード確認"
+    characters: "文字"
+    minimum: "最小 "
+  login:
+    email: "メール"
+    password: "パスワード"
+    remember-me: "覚える"
+    new-here: "アカウントがない?"
   pages:
     home: "ホーム"
   layouts:
