--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,5 @@
 en:
-  hello: "よこそ 農産レビューシステム"
-  app_title: "農産レビューシステム"
+  app_title: "FAVS"
   team:
     name: "神様 チーム"
     email: "kamisama.team@example.com"
