--- a/config/locales/post.yml
+++ b/config/locales/post.yml
@@ -9,3 +9,6 @@ en:
     post_title: "タイトル"
     post_content: "内容"
     you_mind: "さん一今なにしている？"
+  searches:
+    users: "ユーザー"
+    products: "農産物"
