--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,7 +48,7 @@ en:
     outline:
       post: "最新の記事をチェックしましょう。"
       farmer: "ここでは、農家さんの情報を確認できます。"
-      product: "農産物の栄養素や、料理のメニュー、保存方法などの情報を確認できます。"
+      product: "農産物の情報を確認できます。"
     to_watch: "をみる"
     thumb:
       san: "さん"
